--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Verified System</title>
+<title>Verified System Full</title>
 <style>
 body { font-family: 'Segoe UI', sans-serif; background: #f4f6f9; margin:0; padding:0; }
 header { background: #2e7d32; color: white; padding: 15px; text-align: center; font-size: 20px; }
@@ -23,12 +23,13 @@ th { background-color: #f2f2f2; }
 .bonus-blue { color: #1e88e5; font-weight:bold; }
 #depositModalOverlay { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:999; }
 #depositModal { background:white; padding:20px; border-radius:12px; max-width:400px; width:90%; text-align:center; }
+#adminSection { display:none; }
 @media screen and (max-width:600px){ button{width:100%;} input, select{font-size:16px;} }
 </style>
 </head>
 <body>
 
-<header>Verified System</header>
+<header>Verified System Full</header>
 <div class="container">
 
 <!-- Balance -->
@@ -80,9 +81,15 @@ th { background-color: #f2f2f2; }
 </table>
 </div>
 
-<!-- Admin -->
+<!-- Admin Login Button -->
 <div class="section">
-<h3>Admin: Add Balance</h3>
+<h3>Admin Panel</h3>
+<button class="btn-admin" onclick="showAdminLogin()">Login as Admin</button>
+</div>
+
+<!-- Admin Section Hidden -->
+<div class="section" id="adminSection">
+<h3>Add Balance to User</h3>
 <input type="text" id="adminRefCode" placeholder="User Ref Code">
 <input type="number" id="adminAmount" placeholder="Amount">
 <button class="btn-admin" onclick="addBalance()">Add Balance</button>
@@ -102,40 +109,159 @@ th { background-color: #f2f2f2; }
 </div>
 
 <script>
-// User DB
-let usersDB = {};
-let transactions = [];
+// User info
+let user = { balance:0, dailyClaimed:false, lastCheckin:null, refCode:Math.random().toString(36).substring(2,8), refBonus:0, referrals:0, firstDepositDone:false };
 let userTransactions = [];
-let user = { balance:0, dailyClaimed:false, lastCheckin:null, refCode:Math.random().toString(36).substring(2,8), referredBy:null, firstDepositDone:false, refBonus:0, referrals:0 };
 
-// Referral
-const urlParams = new URLSearchParams(window.location.search);
-const ref = urlParams.get('ref');
-if(ref && ref!==user.refCode){ user.referredBy = ref; if(!usersDB[ref]) usersDB[ref]={balance:0,refBonus:0,referrals:0,firstDepositDone:false}; }
-usersDB[user.refCode] = { balance:0, refBonus:0, referrals:0, firstDepositDone:false };
-document.getElementById('refLink').value = window.location.href.split("?")[0]+"?ref="+user.refCode;
-
-// Update
-function updateBalance(){ document.getElementById('balance').innerText = user.balance.toFixed(2); document.getElementById('refBonus').innerText=user.refBonus.toFixed(2); document.getElementById('refCount').innerText=user.referrals; updateUserTxTable(); }
-function addTransaction(userCode,type,amount,detail){ let time=new Date().toLocaleString(); transactions.push({time,userCode,type,amount,detail}); if(userCode===user.refCode) userTransactions.push({time,type,amount,detail}); updateBalance(); }
-function updateUserTxTable(){ const tbody=document.getElementById('userTxTable'); tbody.innerHTML=''; for(let tx of userTransactions){ const tr=document.createElement('tr'); tr.innerHTML=`<td>${tx.time}</td><td>${tx.type}</td><td>${tx.amount.toFixed(2)}</td><td>${tx.detail}</td>`; tbody.appendChild(tr); } }
+// Update balance & table
+function updateBalance(){
+  document.getElementById('balance').innerText = user.balance.toFixed(2);
+  document.getElementById('refBonus').innerText = user.refBonus.toFixed(2);
+  document.getElementById('refCount').innerText = user.referrals;
+  updateUserTxTable();
+}
+function updateUserTxTable(){
+  const tbody = document.getElementById('userTxTable');
+  tbody.innerHTML='';
+  for(let tx of userTransactions){
+    const tr = document.createElement('tr');
+    tr.innerHTML=`<td>${tx.time}</td><td>${tx.type}</td><td>${tx.amount.toFixed(2)}</td><td>${tx.detail}</td>`;
+    tbody.appendChild(tr);
+  }
+}
 
 // Deposit Modal
-function openDepositModal(){ let amount = document.getElementById('depositAmount').value; document.getElementById('depositAmountDisplay').innerText = amount; document.getElementById('depositModalOverlay').style.display='flex'; }
-function closeDepositModal(){ document.getElementById('depositModalOverlay').style.display='none'; document.getElementById('trxId').value=''; document.getElementById('depositMsg').innerText=''; }
-function submitDeposit(){ let amount = parseFloat(document.getElementById('depositAmount').value); let trx = document.getElementById('trxId').value.trim(); if(!trx){ alert("Enter Transaction ID"); return; } user.balance += amount; user.firstDepositDone=true; addTransaction(user.refCode,'Deposit',amount,'Txn ID: '+trx); document.getElementById('depositMsg').innerText='Deposit successful!'; closeDepositModal(); updateBalance(); }
+function openDepositModal(){ 
+  let amount = document.getElementById('depositAmount').value;
+  document.getElementById('depositAmountDisplay').innerText = amount;
+  document.getElementById('depositModalOverlay').style.display='flex'; 
+}
+function closeDepositModal(){ 
+  document.getElementById('depositModalOverlay').style.display='none';
+  document.getElementById('trxId').value=''; 
+  document.getElementById('depositMsg').innerText=''; 
+}
+function submitDeposit(){
+  let amount = parseFloat(document.getElementById('depositAmount').value);
+  let trx = document.getElementById('trxId').value.trim();
+  if(!trx){ alert("Enter Transaction ID"); return; }
 
-// Daily Income 20% of deposit
-function claimDailyIncome(){ if(user.dailyClaimed){ alert("Already claimed!"); return; } if(!user.firstDepositDone){ alert("Make deposit first!"); return; } let dailyIncome = parseFloat(document.getElementById('depositAmount').value)*0.2; user.balance+=dailyIncome; user.dailyClaimed=true; addTransaction(user.refCode,'Daily Income',dailyIncome,'20% of deposit'); updateBalance(); alert(`Daily income added: ${dailyIncome.toFixed(2)} Taka`); }
+  // PHP backend fetch
+  fetch('deposit.php',{
+    method:'POST',
+    headers:{'Content-Type':'application/x-www-form-urlencoded'},
+    body:`userRef=${user.refCode}&amount=${amount}&trxId=${trx}`
+  }).then(r=>r.json()).then(res=>{
+    if(res.status==1){
+      user.balance=res.balance;
+      user.firstDepositDone=true;
+      addTransaction('Deposit', amount, 'Txn ID: '+trx);
+      closeDepositModal();
+      updateBalance();
+      alert(res.msg);
+    } else { alert(res.msg); }
+  });
+}
+
+// Daily income
+function claimDailyIncome(){
+  if(user.dailyClaimed){ alert("Already claimed!"); return; }
+  if(!user.firstDepositDone){ alert("Deposit first"); return; }
+  let dailyIncome = parseFloat(document.getElementById('depositAmount').value)*0.2;
+  fetch('deposit.php',{
+    method:'POST',
+    headers:{'Content-Type':'application/x-www-form-urlencoded'},
+    body:`userRef=${user.refCode}&amount=${dailyIncome}&trxId=DailyIncome`
+  }).then(r=>r.json()).then(res=>{
+    if(res.status==1){
+      user.balance=res.balance;
+      addTransaction('Daily Income', dailyIncome, '20% of deposit');
+      user.dailyClaimed=true;
+      updateBalance();
+      alert(`Daily income added: ${dailyIncome.toFixed(2)} Taka`);
+    }
+  });
+}
 
 // Check-in bonus
-function claimCheckinBonus(){ let today = new Date().toDateString(); if(user.lastCheckin===today){ alert("Already claimed!"); return; } if(user.balance>0){ let bonus = user.balance*0.1; user.balance+=bonus; user.lastCheckin=today; addTransaction(user.refCode,'Check-in Bonus',bonus,'10% of balance'); updateBalance(); alert(`Check-in bonus added: ${bonus.toFixed(2)} Taka`); } else{ alert("Deposit first"); } }
+function claimCheckinBonus(){
+  let today = new Date().toDateString();
+  if(user.lastCheckin===today){ alert("Already claimed"); return; }
+  if(user.balance>0){
+    let bonus = user.balance*0.1;
+    fetch('deposit.php',{
+      method:'POST',
+      headers:{'Content-Type':'application/x-www-form-urlencoded'},
+      body:`userRef=${user.refCode}&amount=${bonus}&trxId=CheckinBonus`
+    }).then(r=>r.json()).then(res=>{
+      if(res.status==1){
+        user.balance=res.balance;
+        user.lastCheckin=today;
+        addTransaction('Check-in Bonus', bonus, '10% of balance');
+        updateBalance();
+        alert(`Check-in bonus added: ${bonus.toFixed(2)} Taka`);
+      }
+    });
+  } else { alert("Deposit first"); }
+}
 
 // Referral
-function copyRef(){ let refInput=document.getElementById('refLink'); refInput.select(); refInput.setSelectionRange(0,99999); document.execCommand("copy"); alert("Referral link copied!"); }
+document.getElementById('refLink').value=window.location.href.split("?")[0]+"?ref="+user.refCode;
+function copyRef(){
+  let refInput=document.getElementById('refLink');
+  refInput.select(); refInput.setSelectionRange(0,99999);
+  document.execCommand("copy");
+  alert("Referral link copied!");
+}
 
-// Admin
-function addBalance(){ let ref=document.getElementById('adminRefCode').value.trim(); let amount=parseFloat(document.getElementById('adminAmount').value); if(!ref||isNaN(amount)||amount<=0){ alert("Invalid"); return; } if(!usersDB[ref]) usersDB[ref]={balance:0,refBonus:0,referrals:0,firstDepositDone:false}; usersDB[ref].balance+=amount; addTransaction(ref,'Admin Added',amount,'Admin credit'); alert(amount+' Taka added to '+ref); document.getElementById('adminRefCode').value=''; document.getElementById('adminAmount').value=''; updateBalance(); }
+// Transactions
+function addTransaction(type, amount, detail){
+  let time = new Date().toLocaleString();
+  userTransactions.push({time,type,amount,detail});
+  updateUserTxTable();
+}
+
+// Admin Login
+function showAdminLogin(){
+  let username = prompt("Enter Admin Username");
+  let password = prompt("Enter Admin Password");
+
+  fetch('admin_add.php',{
+    method:'POST',
+    headers:{'Content-Type':'application/x-www-form-urlencoded'},
+    body:`adminUser=${username}&adminPass=${password}&targetRef=${user.refCode}&amount=0`
+  }).then(r=>r.json()).then(res=>{
+    if(res.status==1){
+      document.getElementById('adminSection').style.display='block';
+      alert("Admin login successful!");
+    } else { alert("Invalid admin credentials!"); }
+  });
+}
+
+// Admin add balance
+function addBalance(){
+  let targetRef = document.getElementById('adminRefCode').value;
+  let amount = parseFloat(document.getElementById('adminAmount').value);
+  if(!targetRef || !amount){ alert("Fill all fields"); return; }
+
+  let adminUsername = prompt("Admin username");
+  let adminPassword = prompt("Admin password");
+
+  fetch('admin_add.php',{
+    method:'POST',
+    headers:{'Content-Type':'application/x-www-form-urlencoded'},
+    body:`adminUser=${adminUsername}&adminPass=${adminPassword}&targetRef=${targetRef}&amount=${amount}`
+  }).then(r=>r.json()).then(res=>{
+    if(res.status==1){
+      if(targetRef===user.refCode) user.balance=res.balance;
+      addTransaction('Admin Added', amount, 'Balance added by Admin');
+      updateBalance();
+      alert(res.msg);
+    } else { alert(res.msg); }
+  });
+}
+
+updateBalance();
 </script>
 
 </body>
